HW5/deployment-redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redmine
  name: redmine
  namespace: hw5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      hostNetwork: true
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
          name: redmine
          protocol: TCP
