HW5/service-test.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: hw5
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: net-tool
  type: ClusterIP
