HW5/ingress-test.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: hw5
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: test
          servicePort: 80
