HW5/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redmine-ingress
  namespace: hw5
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: srv-redmine
#          servicePort: 3000
          servicePort: 80
